objects/PLNDR_LOS__PrecisionLender_Pricing_Scenario__c.object
<CustomObject>
    <description>This object represents an Opportunity in PrecisionLender</description>
    <fields>
        <fullName>PLNDR_LOS__Close_Date__c</fullName>
        <description>Opportunity Close Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PLNDR_LOS__PrecisionLender_Opportunity_Id__c</fullName>
        <description>The Opportunity Id in PrecisionLender</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>PrecisionLender Opportunity Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR_LOS__Relationship_External_Id__c</fullName>
        <description>The linked relationship Id in PrecisionLender</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR_LOS__Stage__c</fullName>
        <description>Opportunity stage</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>PrecisionLender Pricing Scenario</label>
    <listViews>
        <fullName>PLNDR_LOS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>PrecisionLender Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PrecisionLender Pricing Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>